# CNProposal

./: CMakeLists.txt  README.md
include/: BTP.h  Data.h  Function.h  GM.h  GMSampler.h  HyperParameters.h  InferenceEngine.h  MI.h  MT.h  MTSampler.h  MT_BTP.h  MyTypes.h  SamplingFunction.h  Utils.h  Variable.h  myRandom.h
src/: BTP.cpp  Data.cpp  Function.cpp  GM.cpp  HyperParameters.cpp  MI.cpp  MT.cpp  MT_BTP.cpp  PythonInterface.cpp  Utils.cpp  main.cpp  myRandom.cpp
target_src/: fcbn.py  main_bn_sample_cpt.cpp  main_check_mts.cpp  main_exact_inf.cpp  main_exact_inf_bn.cpp  main_exact_inf_mt.cpp  main_gen_evid.cc  main_learn_mt.cpp  main_sample_bn.cpp  main_sample_inf.cpp  main_sample_mt.cpp
